# cydroid-toolkit

./: ARCHIVE_SPECIFICATION.md  CONTRIBUTING.md  Cargo.toml  FILE_INDEX.md  GLOBAL_DEPLOYMENT_MANIFEST.md  PROJECT_CLOSURE.md  PROJECT_COMPLETION_CERTIFICATE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_MANIFEST.md  RELEASE_NOTES_FINAL.md  SECURITY.md
.github/workflows/: ci_workline_soul_safe.yml
aln/particles/: bostrom.governance.threshold.v1.aln  ci.workline.zerotrust.v1.aln  cross.chain.bridge.spec.v1.aln  cybercore.neu.budget.v1.aln  cydroid.care.access.credit.v1.aln  cydroid.community.council.v1.aln  cydroid.deprecation.policy.v1.aln  cydroid.education.syllabus.v1.aln  cydroid.encoder.config.v1.aln  cydroid.evidence.bundle.v1.aln  cydroid.global.deployment.v1.aln  cydroid.hardware.abstraction.v1.aln  cydroid.row.ledger.v1.aln  cydroid.security.audit.v1.aln  soul.guardrail.spec.v1.aln
aln/schemas/: cydroid-spec.schema.yaml
apps/android-operator-ui/src/main/java/org/cydroid/operator/: OperatorDashboardActivity.kt
apps/android-operator-ui/src/main/java/org/cydroid/service/: RowLedgerSyncService.kt
apps/web-expert-dashboard/src/: ExpertDashboard.js
apps/web-expert-dashboard/src/extensions/: SoulGuardrailVisualizer.js
crates/cydroid-aln/: Cargo.toml
crates/cydroid-aln/src/: care_credit.rs  consent.rs  encoder_kernel.rs  error.rs  evidence_bundle.rs  lib.rs  mission_execution.rs  neurochannel.rs  neuromorphic_event.rs  row_ledger.rs  swarm_policy.rs  validate.rs
crates/cydroid-aln/tests/: integration.rs  integration_soul_safe.rs
crates/cydroid-deploy/src/: main.rs
crates/cydroid-diagnostic/src/: troubleshooting.rs
crates/cydroid-mojo-kernels/src/: cyberrank_matrix.mojo  neuromorphic_encoder.mojo
crates/cydroid-pqc-signer/src/: lib.rs
crates/cydroid-security/src/: audit.rs  soul_guardrail_enforcement.rs
lua/: swarm_policy_bus.lua
