[workspace]
members = [
    "crates/cydroid-aln",
    "crates/cydroid-pqc-signer",
    "crates/cydroid-deploy",
    "crates/cydroid-security",
    "crates/cydroid-mojo-kernels",
    "apps/android-operator-ui",
    "apps/web-expert-dashboard",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Doctor0Evil/Cydroid"
authors = ["The-Great-Perplexity", "Doctor0Evil"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha3 = "0.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
